# hub

./: .gitignore  .index.json  LICENSE  Pipfile  README.md  blockers.go  blockers.json  bucket_input.yaml  check-index  ci.go  generate.go  go.mod  go.sum  hublint  index.html  mkblockers  mkindex  pyproject.toml  tests.sh  update.go
.appsec-tests/: template_acquis.yaml  template_appsec-profile.yaml  template_config.yaml  template_config2.yaml  template_profiles.yaml
.appsec-tests/CVE-2017-9841/: CVE-2017-9841.yaml  config.yaml
.appsec-tests/CVE-2018-10562/: CVE-2018-10562.yaml  config.yaml
.appsec-tests/CVE-2019-1003000/: CVE-2019-1003000.yaml  config.yaml
.appsec-tests/CVE-2019-12989/: CVE-2019-12989.yaml  config.yaml
.appsec-tests/CVE-2020-11738/: CVE-2020-11738.yaml  config.yaml
.appsec-tests/CVE-2020-17496/: CVE-2020-17496.yaml  config.yaml
.appsec-tests/CVE-2021-22941/: CVE-2021-22941.yaml  config.yaml
.appsec-tests/CVE-2021-3129/: CVE-2021-3129.yaml  config.yaml
.appsec-tests/CVE-2022-22954/: CVE-2022-22954.yaml  config.yaml
.appsec-tests/CVE-2022-22965/: CVE-2022-22965.yaml  CVE-2023-22965.yaml  config.yaml
.appsec-tests/CVE-2022-27926/: CVE-2022-27926.yaml  config.yaml
.appsec-tests/CVE-2022-35914/: CVE-2022-35914.yaml  config.yaml
.appsec-tests/CVE-2022-44877/: CVE-2022-44877.yaml  config.yaml
.appsec-tests/CVE-2022-46169/: CVE-2022-46169.yaml  config.yaml
.appsec-tests/CVE-2023-0600/: CVE-2023-0600.yaml  config.yaml
.appsec-tests/CVE-2023-0900/: CVE-2023-0900.yaml  config.yaml
.appsec-tests/CVE-2023-1389/: CVE-2023-1389.yaml  config.yaml
.appsec-tests/CVE-2023-2009/: CVE-2023-2009.yaml  config.yaml
.appsec-tests/CVE-2023-20198/: CVE-2023-20198.yaml  config.yaml
.appsec-tests/CVE-2023-22515/: CVE-2023-22515.yaml  config.yaml
.appsec-tests/CVE-2023-22527/: CVE-2023-22527.yaml  config.yaml
.appsec-tests/CVE-2023-22965/: CVE-2023-22965.yaml  config.yaml
.appsec-tests/CVE-2023-23489/: CVE-2023-23489.yaml  config.yaml
.appsec-tests/CVE-2023-23752/: CVE-2023-23752.yaml  config.yaml
.appsec-tests/CVE-2023-24489/: CVE-2023-24489.yaml  config.yaml
.appsec-tests/CVE-2023-28121/: CVE-2023-28121.yaml  config.yaml
.appsec-tests/CVE-2023-33617/: CVE-2023-33617.yaml  config.yaml
.appsec-tests/CVE-2023-34362/: CVE-2023-34362.yaml  config.yaml
.appsec-tests/CVE-2023-35078/: CVE-2023-35078.yaml  config.yaml
.appsec-tests/CVE-2023-35082/: CVE-2023-35082.yaml  config.yaml
.appsec-tests/CVE-2023-3519/: CVE-2023-3519.yaml  config.yaml
.appsec-tests/CVE-2023-38205/: CVE-2023-38205.yaml  config.yaml
.appsec-tests/CVE-2023-4634/: CVE-2023-4634.yaml  config.yaml
.appsec-tests/CVE-2023-46805/: CVE-2023-46805.yaml  config.yaml
.appsec-tests/CVE-2023-49070/: CVE-2023-49070.yaml  config.yaml
.appsec-tests/CVE-2023-50164/: CVE-2023-50164.yaml  config.yaml
.appsec-tests/CVE-2023-6360/: CVE-2023-6360.yaml  config.yaml
.appsec-tests/CVE-2023-6553/: CVE-2023-6553.yaml  config.yaml
.appsec-tests/CVE-2023-6567/: CVE-2023-6567.yaml  config.yaml
.appsec-tests/CVE-2023-6623/: CVE-2023-6623.yaml  config.yaml
.appsec-tests/CVE-2023-7028/: CVE-2023-7028.yaml  config.yaml
.appsec-tests/CVE-2024-1061/: CVE-2024-1061.yaml  config.yaml
.appsec-tests/CVE-2024-1071/: CVE-2024-1071.yaml  config.yaml
.appsec-tests/CVE-2024-1212/: CVE-2024-1212.yaml  config.yaml
.appsec-tests/CVE-2024-13161/: CVE-2024-13161.yaml  config.yaml
.appsec-tests/CVE-2024-22024/: CVE-2024-22024.yaml  config.yaml
.appsec-tests/CVE-2024-29849/: CVE-2024-29849.yaml  config.yaml
.appsec-tests/CVE-2024-3273/: config.yaml  vpatch-cve-2024-3273.yaml
.appsec-tests/CVE-2025-14611/: CVE-2025-14611.yaml  config.yaml
.appsec-tests/CVE-2025-2611/: CVE-2025-2611.yaml
.appsec-tests/CVE-2025-57819/: CVE-2025-57819.yaml  config.yaml
.appsec-tests/CVE-2025-64446/: CVE-2025-64446.yaml  config.yaml
.appsec-tests/CVE-2025-68472/: CVE-2025-68472.yaml  config.yaml
.appsec-tests/CVE-2026-24423/: CVE-2026-24423.yaml  config.yaml
.appsec-tests/appsec-generic-test/: appsec-generic-test.yaml  config.yaml
.appsec-tests/connectwise-auth-bypass/: config.yaml  connectwise-auth-bypass.yaml
.appsec-tests/cve-2023-42793/: config.yaml  cve-2023-42793.yaml
.appsec-tests/generic-freemarker-ssti-args/: config.yaml  generic-freemarker-ssti-args.yaml
.appsec-tests/generic-freemarker-ssti-body/: config.yaml  generic-freemarker-ssti-body.yaml
.appsec-tests/generic-no-user-agent/: config.yaml  generic-no-user-agent.yaml
.appsec-tests/generic-wordpress-uploads-listing/: config.yaml  generic-wordpress-uploads-listing.yaml
.appsec-tests/generic-wordpress-uploads-php/: config.yaml  generic-wordpress-uploads-php.yaml
.appsec-tests/symfony_profiler/: config.yaml  symfony_profiler.yaml
.appsec-tests/vpatch-CVE-2002-1131/: CVE-2002-1131.yaml  config.yaml
.appsec-tests/vpatch-CVE-2007-0885/: CVE-2007-0885.yaml  config.yaml
.appsec-tests/vpatch-CVE-2010-2507/: CVE-2010-2507.yaml  config.yaml
.appsec-tests/vpatch-CVE-2014-5181/: CVE-2014-5181.yaml  config.yaml
.appsec-tests/vpatch-CVE-2015-5471/: CVE-2015-5471.yaml  config.yaml
.appsec-tests/vpatch-CVE-2017-1000170/: CVE-2017-1000170.yaml  config.yaml
.appsec-tests/vpatch-CVE-2018-11511/: CVE-2018-11511.yaml  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.exportedField/: exported.go  go.mod  go.sum
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.tests/: template_config.yaml  template_config2.yaml
.waap-tests/: template_acquis.yaml  template_waap-profile.yaml
blockers/: list.json
collections/: couchdb.md  couchdb.yaml  kaijo-pfsense-ssh.yaml
mkindex/: pyproject.toml
scripts/: .scenariosignore  appsec_vpatch_lint.py  generate_doc.py  mitre_db.py  scenario_taxonomy.py
taxonomy/: behaviors.json  behaviors.md  classifications.json  false_positives.json  mitre_attack.json  scenario_taxonomy_errors.md  scenarios.json  scenarios.md
waf-check/: .golangci.yml  config.go  config.yaml  dataset.go  go.mod  go.sum  main.go  manager.go  request.go  result.go  utils.go
(+5297 files in other folders)
