[project]
name = "cshub"
version = "0.1.0"
description = "tools to manage index, blockers and lint configuration"
readme = "README.md"
authors = [
    { email = "marco@crowdsec.net" }
]
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.23.0",
    "mdutils>=1.6.0",
    "pygithub>=2.6.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "typed-argument-parser>=1.10.1",
]

[project.scripts]
hublint = "cshub.hublint:main"
mkindex = "cshub.mkindex:main"
mkblockers = "cshub.mkblockers:main"
scenario-taxonomy = "cshub.scenario_taxonomy:main"
mitre-db = "cshub.mitre_db:main"
appsec-vpatch-lint = "cshub.appsec_vpatch_lint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.28.1",
    "ruff>=0.11.0",
]
